--- a/templates/vendor_profile.html
+++ b/templates/vendor_profile.html
@@ -38,7 +38,7 @@
             <li><img src="/static/img/Icons/shopping-store.png"> Accepts Credit Cards</li>
         {% endif %}
         {% if vendor.organic %}
-            <li><img src="/static/img/organic.png"></li>
+            <li><img src="/static/img/Icons/organic.png"></li>
         {% endif %}
         </ul>
         
