--- a/templates/base.html
+++ b/templates/base.html
@@ -6,21 +6,25 @@
     <link href="/static/styles.css" rel="stylesheet">
     <title>Bay Area Farmer's Markets</title>
 </head>
+
+<div class="container-fluid cream">
+<img src="http://www.fortvalleymainstreet.org/userfiles/Image/find-farmers-markets.jpg" class="center" style="padding-top:10px;">
+</div>
 <!-- ------------------------------- NAV BAR ------------------------------- -->
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light" style="background-color: YellowGreen;">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="background-color: DarkKhaki;">
     <div class="container-fluid">
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">Bay Area Farmer's Markets</a>
+        <span class="navbar-brand">Bay Area Farmer's Markets</span>
     </div>
     <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
-        <li><a href="/markets">View Markets</a></li>
-        <li><a href="/vendors">View Vendors</a></li>
+        <li><a href="/markets" class="nav-link">View Markets</a></li>
+        <li><a href="/vendors" class="nav-link">View Vendors</a></li>
         {% if "user_id" in session %}
             <li><a href="/logout">Logout</a></button></li>
         {% else %}
-            <li><a href="#" id="pull-right" data-toggle="modal" data-target="#loginModal">Login</a></li>
-            <li><a href="#" id="pull-right" data-toggle="modal" data-target="#registerModal">Register</a></li>
+            <li><a href="#" class="navbar-right" data-toggle="modal" data-target="#loginModal">Login</a></li>
+            <li><a href="#" class="navbar-right" data-toggle="modal" data-target="#registerModal">Register</a></li>
         {% endif %}
     </ul>
   </div>
