--- a/templates/flip.html
+++ b/templates/flip.html
@@ -10,11 +10,11 @@
             <div class="col-xs-4">
                 <div class="flip"> 
                   <div class="card"> 
-                    <div class="face front" style="background-image: url('/static/img/Flip/{{ vendor.vendor_name }}.jpg'); width: 400px; height: 200px;">
-                        <span>&nbsp;{{ vendor.vendor_name }}&nbsp;</span>
+                    <div class="face front" style='background-image: url("/static/img/Flip/{{ vendor.vendor_name }}.jpg");'>
+                        <span class="cream"><span style="color:black; display:inline-block;">&nbsp;{{ vendor.vendor_name }}&nbsp;</span></span>
                     </div> 
                     <div class="face back" data-vendorid={{ vendor.vendor_id }}>
-                        {{ vendor.vendor_commodity }}
+                        <b>{{ vendor.vendor_commodity }}</b>
 
                     </div> 
                   </div> 
