--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
-
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
     <link href="/static/styles.css" rel="stylesheet">
-    
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/static/mapstyles.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
+
     <title>Bay Area Farmer's Markets</title>
 </head>
 
@@ -22,6 +24,7 @@
         <li><a href="/markets">View Markets</a></li>
         <li><a href="/vendors">View Vendors</a></li>
         {% if "user_id" in session %}
+            <li><a href="/favorites">View My Favorites</a></button></li>
             <li><a href="/logout">Logout</a></button></li>
         {% else %}
             <li><a href="#" class="navbar-right" data-toggle="modal" data-target="#loginModal">Login</a></li>
@@ -40,19 +43,20 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title" id="exampleModalLabel">Please Sign In</h1>
+        <h1 class="modal-title" id="loginModalLabel">Please Sign In</h1>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
             <div class="form-group">
-                <form action='/login' method=post>
+                <form action='/login' method="post">
                     <br>Email:<br>
                     <input type="text" name="email"><br>
                     <br>Password<br>
                     <input type="password" name="password"><br><br>
-                    <input id="login" type="submit" name="submit" value="Login">
+                    <input type="submit" name="submit" value="Login">
+                    <br>
                 </form>
             </div>
       </div>
@@ -65,7 +69,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title" id="exampleModalLabel">Please Register</h1>
+        <h1 class="modal-title" id="registerModalLabel">Please Register</h1>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -101,9 +105,6 @@
    return false;
 })
 </script>
-
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
 
 </body>
 
