--- a/templates/markets.html
+++ b/templates/markets.html
@@ -1,13 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<head>
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}">
-</script>
 <script src="/static/marketMap.js"></script>
-<script src="/static/mapstyles.js"></script>
-</head>
-
+<script src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}"></script>
+    
 <div class="container-fluid">
     <div class="row green">
         <div class="cream" style="margin: 20px; padding: 10px;">
@@ -19,7 +14,7 @@
         <div class="col-xs-2"></div>
         <div class="col-xs-5 green">
             <div class="cream" style="margin: 20px; padding: 10px;">
-            <h2 class="border">List of all Markets in our database:</h2>
+            <h2 class="border">List of All Markets in Our Database:</h2>
             <ul>
                 <!--Lists all markets in markets table and allows each name to be a clickable link leading to the market profile page-->
                 {% for market in markets %}
@@ -29,7 +24,7 @@
         </div>
         </div>
         <div class="col-xs-5">
-            <div id="market-map"></div>
+            <div id="all-markets-map"></div>
         </div>
     </div>
     <br><br><br>
